<resources>
    <string name="app_name">ScheduleOwl</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="add_course">Add Course</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="add_term">Add Term</string>
    <string name="add_new_term">Add New Term</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_courses">Select Courses</string>
    <string name="chooser_item">Chooser Item</string>
    <string name="add_new_course">Add New Course</string>
    <string name="enter_course_title">Enter Course Title</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="add_alert">Add Alert</string>
    <string name="notes">Notes</string>
    <string name="share_notes">Share Notes</string>
    <string name="select_assessments">Select Assessments</string>
    <string name="course_status">Course Status</string>
    <string name="empty_list">This list is empty!</string>
    <string name="add_items">Click + to start adding items</string>
    <string name="wgu_logo">WGU Logo</string>
    <string name="date_prompt">YYYY-MM-DD</string>
    <string name="add_new_assessment">Add New Assessment</string>
    <string name="due_date">Due Date</string>
    <string name="add_new_mentor">Add New Mentor</string>
    <string name="edit_new_assessment">Edit New Assessment</string>
    <string name="enter_assessment_title">Enter Assessment Title</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="edit_term">Edit Term</string>
    <string name="enter_term_title">Enter Term Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="delete_successful">Delete successful!</string>
    <string name="insert_failed">Insert failed!</string>
    <string name="insert_successful">Insert successful!</string>
    <string name="update_failed">Update failed!</string>
    <string name="update_successful">Update successful!</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="send_to">Send To</string>
    <string name="channel_name">ScheduleOwl</string>
    <string name="channel_description">Description Goes Here</string>
    <string name="select_mentors">Select Mentors</string>
    <string name="welcome_text">Welcome to ScheduleOwl. Use the tabs on the next screen to add and edit items to track your progress. Click Start to begin.</string>
    <string name="start">Start</string>
    <string-array name="course_status">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Planned</item>
    </string-array>
</resources>
