<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".EditTerm">

    <TextView
        android:id="@+id/textViewAddTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_term"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_term_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date" />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date_prompt"
        android:importantForAutofill="no"
        android:inputType="date" />

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date_prompt"
        android:importantForAutofill="no"
        android:inputType="date" />

    <TextView
        android:id="@+id/textViewCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_courses" />

    <ListView
        android:id="@+id/listViewCourses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonCancelClicked"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonDeleteClicked"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonSaveClicked"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>