<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_terms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentCourses">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:text="@string/add_course" />

    <ListView
        android:id="@+id/listViewCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/emptyCourseView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/emptyCourseItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/wgu_logo"
            android:padding="16dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/emptyCourseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emptyCourseItem"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:text="@string/empty_list" />

        <TextView
            android:id="@+id/emptyCourseSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emptyCourseTitle"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:text="@string/add_items" />
    </RelativeLayout>
</RelativeLayout>